# biowasm-rust

./: Cargo.toml  README.md  index.html
.cargo/: config
.github/workflows/: rust.yaml
data/: test.fasta
scripts/: emcc_build.sh  setup_emsdk.sh
workflows/: static.yaml
